# lssr

./: .prettierignore  Makefile  README.md  command-history.txt  cspell.json  package.json  pnpm-lock.yaml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: check-pypi.yml  codeql-analysis.yml  manual.yml  python-publish.yml  tests.yml
.husky/: pre-commit
lssr/: cli.py  core.py  util.py
scripts/: bump_version.py
tests/: conftest.py  test___main__.py  test_cli.py  test_lssr.py
tests/core/: test_colored.py  test_get_info_message.py  test_get_options.py  test_get_sort_mode.py  test_get_sorted_items.py  test_get_target_strpath.py  test_main.py
tests/example_dir/: size_200bytes  size_5000bytes
