[tool.poetry]
name = "lssr"
version = "1.1.1"
description = "Alternative ls command."
license = "MIT"
authors = ["seijinrosen <86702775+seijinrosen@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/seijinrosen"
repository = "https://github.com/seijinrosen/lssr"
documentation = "https://github.com/seijinrosen/lssr"

[tool.poetry.dependencies]
python = "^3.7"

rich = "^12.4.4"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.10.0"
isort = "^5.10.1"
pyperclip = "^1.8.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
tox = "^3.27.1"

[tool.poetry.scripts]
lssr = "lssr.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[tool.isort]
profile = "black"
